creation of build page, styling, skeleton laid out. work on navbar, attempt to bug solve for collapse menu, styling menu to right side. color adjustments, border kills, temp pic imports, class generation. 5 hours.

--- a/main.css
+++ b/main.css
@@ -1,14 +1,9 @@
-* {
-  margin: 0;
-  padding: 0;
-}
-
-*:focus {
-  outline:none;
+.hidden {
+    display: none;
 }
 
 #navMain {
-    background-color: rgb(255, 165, 0, 0.75);
+    background-color: rgb(255, 165, 0, 0.85);
     align-items: center;
 	/* border: 1px solid black; */
 }
@@ -19,30 +14,23 @@
 	/* border: 1px solid black; */
 }
 
-#navRow {
-    /* display: flex;
-	border: 1px solid black;
-    justify-content: center; */
-    text-align: center;  
-	
-}
-
 .navbar-brand {
     /* create media query for size */
 }
 
+#navRow {
+    text-align: center;
+}
+
 #titleLogo {
     background-color: #27222e;
-    /* color: green;
-    background-color: rgb(235,164,3);
-    border: 1px solid blue; 
-    margin-left: 5px; */
     border-radius: 15px;
     margin: 6px 0 10px 0;
     text-decoration: none;
-    width: 10%;
+    width: 80px;
 	padding: 1%;
     box-shadow: 4px 5px rgb(0, 0, 0, 0.2);
+    border: 1px solid white;
 }
 
 #navbarNavAltMarkup {
@@ -51,18 +39,18 @@
 }
 
 #hamButton {
-    border-color: rgb(216,181,154);
+    border-color: #27222e;
     border-width: 0.15em;
-    color: rgb(17,71,61);
+    color: #27222e;
 }
 
 #spanIcon {
     background-image: url(
-        "data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgb(216,181,154)' stroke-width='3' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+        "data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgb(39, 34, 46)' stroke-width='3' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
 }
 
 #hamburgerList {
-    
+
     border-radius: 15px;
     padding: 5px; 
     /* margin-right: 30px;
@@ -80,7 +68,7 @@
     font-size: 1.3em;
     font-family: "Roboto-Slab", sans-serif;
     text-decoration: none;
-    max-width: 100px;
+    /* max-width: 100px; */
     text-align: center;
     padding: 3px 8px;
     box-shadow: 4px 5px rgb(0, 0, 0, 0.2);
@@ -88,7 +76,7 @@
 
 .links:hover {
     text-decoration: none;
-    color: rgb(17,71,61);
+    color: orange;
 }
 
 @media screen and (max-width: 769px) {
@@ -114,23 +102,33 @@
         margin-left: 5px;
     }
 
-    #hamButton {
+    #navbarNavAltMarkup {
+        display: flex;
         justify-content: right;
+    }
+
+    #hamButton {
+        /* justify-content: right; */
         float: right;
         margin-top: 25px;
     }
 
     #hamburgerList {
         margin-right: 10px;
-        background-color: rgb(17,71,61);
-        border: 1px solid rgb(17,71,61);
+        background-color: rgb(39, 34, 46);
+        border: 1px solid white;
         border-radius: 15px;
         padding: 5px;
-        float: right;
+        /* justify-content: right; */
     }
 
     .links {
-        
+        background-color: orange;
+        color: rgb(39, 34, 46);
+    }
+
+    .links:hover {
+
     }
 
     #topRow {
@@ -153,39 +151,11 @@ body {
 	background-color: #f3f3f3;
 }
 
-#pageOne {
-	/* border: 1px solid purple; */
+.page {
+	/* border: 1px solid purple;
+    margin-top: 220px; */
 	background-color: #27222e;
-	margin-top: 200px;
-}
-
-/* #navbar {
-	border: 2px solid black;
-	justify-content: center;
-	background-color: #f3f3f3;
-} */
-
-#navDirect {
-	/* border: 1px solid black; */
-}
-
-/* #navOptions {
-	display: flex;
-	justify-content: center;
-} */
-
-.list {
-	/* display: inline-block;
-	border: 1px solid black;
-	margin: auto;
-	width: 10%;
-	text-align: center;
-	font-size: 30px; */
-}
-
-a {
-	text-decoration: none;
-	color: #27222e;
+	
 }
 
 #bird {
@@ -201,15 +171,25 @@ a {
 
 #mainBody {
 	display: flex;
-	/* justify-content: left; */
-	margin-top: 85px;
+	justify-content: center;
+	padding-top: 255px;
 	border: 5px dashed black;
 }
 
 #card1 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 	border: 1px solid black;
-	text-align: center;
-	margin-right: 15%;
+	  
+	/* margin-right: 15%;
+    text-align: center;
+    padding-top: 20px; */
+}
+
+#dogMain {
+    border: 2px solid white;
+    border-radius: 5px;
 }
 
 .gallery {
@@ -221,6 +201,10 @@ a {
 	white-space: nowrap;
 }
 
+#scrollOne {
+    scroll-padding-top: 200px;
+}
+
 .sideScroll {
 	display: inline-block;
 	height: 250px;
@@ -228,10 +212,47 @@ a {
 
 .galleryDogs {
 	margin: 1%;
+    border: 2px solid white;
+    border-radius: 5px;
 }
 
 
+/* BUILD PAGE */
+#buildBody {
+    display: flex;
+	justify-content: center;
+	padding-top: 255px;
+}
 
+.parts {
+    display: inline;
+    justify-content: center;
+    text-align: center;
+}
+
+.partSamples {
+    border: 1px solid white;
+    padding: 30px 0;
+}
+
+.partSamplePics {
+    width: 80%;
+}
+
+#bodySamples {
+    /* max-width: 70%; */
+}
+
+.directional {
+    color: white;
+    text-decoration: none;
+    font-size: 2vw;
+}
+
+.directional:hover {
+    color: white;
+    text-decoration: none;
+}
 
 
 
